Cleanup and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -10,22 +10,27 @@ Tag_*.txt
 tags.txt
 **/*.swp
 .idea/
+misc/scripts/slurm/startall.sh
+analysis/*.csv
+dependency/results/
+analysis/results/
+measurement/ausgabe.txt
 **/fertig.txt
 **/dependency-reduced-pom.xml
-dependency/debug/
-dependency/results/
+dependency/dependencies.xml
+dependency/dependencies/
 measurement/dependencies/
 measurement/dependencies.xml
-src/test/resources/antprojekt2/**/*
-src/test/resources/mavenprojekt2/**/*
-src/test/resources/SimplesTestProjekt/*.yaml
-src/test/resources/SimplesTestProjekt/target/
+dependency/src/test/resources/dependencyIT/current/
+dependency/src/test/resources/dependencyIT/current_peass/
+dependency/src/test/resources/dependencyIT/ausgabe_kieker.txt
 ergebnisse/
 ergebnis*
 performanzanalyse/
 ausgabe*/
 analysen_alt/
 *.jar
+*.json
 out.txt
 **/.classpath
 **/.project
