--- a/dependency/src/main/resources/kieker.monitoring.properties
+++ b/dependency/src/main/resources/kieker.monitoring.properties
@@ -39,6 +39,7 @@ kieker.monitoring.writer.filesystem.ChangeableFolderWriter.realwriter=AsciiFileW
 
 
 kieker.monitoring.writer.filesystem.ChangeableFolderWriter.QueueSize=1000000
+kieker.monitoring.writer.filesystem.ChangeableFolderWriter.PrioritizedQueueSize=1000000
 
 ####
 kieker.monitoring.writer.filesystem.ChangeableFolderWriter.customStoragePath=
