--- a/dependency/src/main/resources/copy/kieker.monitoring.properties
+++ b/dependency/src/main/resources/copy/kieker.monitoring.properties
@@ -39,8 +39,8 @@ kieker.monitoring.writer.filesystem.ChangeableFolderWriter.realwriter=AsciiFileW
 
 kieker.monitoring.core.controller.WriterController.RecordQueueFQN=java.util.concurrent.LinkedBlockingQueue
 
-
 kieker.monitoring.writer.filesystem.ChangeableFolderWriter.QueueSize=1000000
+kieker.monitoring.writer.filesystem.ChangeableFolderWriter.PrioritizedQueueSize=1000000
 
 ####
 kieker.monitoring.writer.filesystem.ChangeableFolderWriter.customStoragePath=
