Add Script + Picocli Interface, Minor Changes

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<module>dependency</module>
         <module>measurement</module>
 	<module>analysis</module>
+	<module>distribution</module>
     </modules>
 
     <developers>
