--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -105,7 +105,7 @@
 		<dependency>
 			<groupId>com.github.javaparser</groupId>
 			<artifactId>javaparser-core</artifactId>
-			<version>3.14.0</version>
+			<version>3.14.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
@@ -132,7 +132,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.8</version>
+			<version>2.9.9</version>
 		</dependency>
 
 		<dependency>
@@ -165,6 +165,12 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.5.5</version>
 			<type>pom</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>info.picocli</groupId>
+			<artifactId>picocli</artifactId>
+			<version>4.0.0-beta-2</version>
 		</dependency>
 	</dependencies>
 
