--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -37,7 +37,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>de.peass.AdaptiveTestStarter</mainClass>
+									<mainClass>de.peass.PeASSMain</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
@@ -56,6 +56,29 @@
 									</excludes>
 								</filter>
 							</filters>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>exec-maven-plugin</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<executions>
+					<execution>
+						<id>Version Calculation</id>
+						<phase>install</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<mainClass>picocli.AutoComplete</mainClass>
+							<arguments>
+								<argument>-n</argument>
+								<argument>./peass</argument>
+								<argument>-o</argument>
+								<argument>${project.parent.basedir}/peass_completion</argument>
+								<argument>de.peass.PeASSMain</argument>
+							</arguments>
 						</configuration>
 					</execution>
 				</executions>
