--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -37,7 +37,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>de.performanzanalysator.Starter</mainClass>
+									<mainClass>de.peass.ContinousExecutor</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
@@ -77,7 +77,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>27.0.1-jre</version>
+			<version>27.1-jre</version>
 		</dependency>
 	</dependencies>
 	<repositories>
