--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -127,6 +127,11 @@
 			<version>2.0.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-core</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>de.peass</groupId>
