--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -100,7 +100,7 @@
 		<dependency>
 			<groupId>com.github.javaparser</groupId>
 			<artifactId>javaparser-core</artifactId>
-			<version>3.14.11</version>
+			<version>3.14.14</version>
 		</dependency>
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
@@ -160,7 +160,7 @@
 		<dependency>
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
-			<version>4.0.2</version>
+			<version>4.0.4</version>
 		</dependency>
 	</dependencies>
 
@@ -179,6 +179,19 @@
 			<comments>License can be found in misc/gpl-2.0.txt</comments>
 		</license>
 	</licenses>
+	
+	<repositories>
+		<repository>
+			<id>snapshots-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
