--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -34,6 +34,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<minimizeJar>false</minimizeJar>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
