--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -58,6 +58,19 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.18.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.1</version>
 				<executions>
@@ -140,10 +153,6 @@
 		</dependency>
 	</dependencies>
 	<repositories>
-		<repository>
-			<id>tmatesoft</id>
-			<url>http://maven.tmatesoft.com/content/repositories/releases/</url>
-		</repository>
 		<repository>
 			<id>snapshots-repo</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
