--- a/measurement/src/test/resources/rootCauseIT/slow_state/pom.xml
+++ b/measurement/src/test/resources/rootCauseIT/slow_state/pom.xml
@@ -2,11 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.peran.example</groupId>
+  <groupId>de.peass.example</groupId>
   <artifactId>example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>peran-example</name>
-  <description>Example for dependency-generation</description>
+  <name>peass-example</name>
+  <description>Example for root cause measurement</description>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
