Use correct writer

--- a/dependency/src/main/resources/copy/kieker.monitoring.properties
+++ b/dependency/src/main/resources/copy/kieker.monitoring.properties
@@ -26,7 +26,7 @@ kieker.monitoring.name=KIEKER-KoPeMe
 ## accepts a single Configuration. 
 #kieker.monitoring.writer=kieker.monitoring.writer.filesystem.AsyncFsWriter
 kieker.monitoring.writer=kieker.monitoring.writer.filesystem.ChangeableFolderWriter
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.realwriter=AsciiFileWriter
+kieker.monitoring.writer.filesystem.ChangeableFolderWriter.realwriter=FileWriter
 
 #####
 #kieker.monitoring.writer=kieker.monitoring.writer.PrintStreamWriter
