--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -60,27 +60,6 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>de.peass.DependencyExecutionReader</mainClass>
-								</transformer>
-							</transformers>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 			</plugin>
 		</plugins>
@@ -95,46 +74,55 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
+			<version>2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.javaparser</groupId>
 			<artifactId>javaparser-core</artifactId>
-			<version>3.15.14</version>
+			<version>3.16.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
 			<version>1.14</version>
 		</dependency>
+
+		<!-- Both are needed in your local maven repo, and both should be downloaded 
+			when building (but are only needed at runtime, if a project does not use 
+			snapshot repo) -->
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit</artifactId>
+			<version>0.11-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>de.dagere.kopeme</groupId>
+			<artifactId>kopeme-junit3</artifactId>
 			<version>0.11-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.10.3</version>
+			<version>2.11.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.3.0</version>
+			<version>3.5.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>2.0.5</version>
+			<version>2.0.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
-			<version>2.0.5</version>
+			<version>2.0.7</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -150,11 +138,11 @@
 			<version>2.5.7</version>
 			<type>pom</type>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
-			<version>4.2.0</version>
+			<version>4.5.0</version>
 		</dependency>
 	</dependencies>
 
@@ -173,7 +161,44 @@
 			<comments>License can be found in misc/gpl-2.0.txt</comments>
 		</license>
 	</licenses>
-	
+
+	<profiles>
+		<profile>
+			<id>buildFatJar</id>
+			<activation>
+				<!-- The shade plugin took ~ 21 s from 25 s of build, if a shaded jar 
+					is built for every module Therfore, share is commented out currently; if 
+					a separate dependency-jar is needed, it could be re-enabled (or transfered 
+					to a profile) -->
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>3.2.4</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+								<configuration>
+									<transformers>
+										<transformer
+											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+											<mainClass>de.peass.DependencyExecutionReader</mainClass>
+										</transformer>
+									</transformers>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<repositories>
 		<repository>
 			<id>snapshots-repo</id>
