--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>peass-distribution</artifactId>
-	<name>peass-distriution</name>
+	<name>peass-distribution</name>
 
 	<parent>
 		<groupId>de.peass</groupId>
