--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -75,6 +75,12 @@
 			<version>1.14</version>
 		</dependency>
 		<dependency>
+			<groupId>net.kieker-monitoring</groupId>
+			<artifactId>kieker</artifactId>
+			<version>1.14</version>
+			<classifier>aspectj</classifier>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.11.3</version>
