--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -33,6 +33,13 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>de.peass</groupId>
+			<artifactId>dependency</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<classifier>tests</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>28.2-jre</version>
