--- a/dependency/src/test/resources/sourceInstrumentation/project_2/pom.xml
+++ b/dependency/src/test/resources/sourceInstrumentation/project_2/pom.xml
@@ -24,8 +24,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.kieker-monitoring</groupId>
+			<artifactId>kieker</artifactId>
+			<version>1.14</version>
 		</dependency>
 	</dependencies>
 </project>
