--- a/dependency/src/test/resources/sourceInstrumentation/project_2_complex/pom.xml
+++ b/dependency/src/test/resources/sourceInstrumentation/project_2_complex/pom.xml
@@ -28,6 +28,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>de.dagere.kopeme</groupId>
+			<artifactId>kopeme-junit</artifactId>
+			<version>0.13-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
 			<version>1.14</version>
