Update to Kieker 1.15-SNAPSHOT

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -84,12 +84,12 @@
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
-			<version>1.14</version>
+			<version>1.15-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
-			<version>1.14</version>
+			<version>1.15-SNAPSHOT</version>
 			<classifier>aspectj</classifier>
 		</dependency>
 		<dependency>
