--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
-			<version>1.14</version>
+			<version>1.15-SNAPSHOT</version>
 			<classifier>aspectj</classifier>
 			<scope>runtime</scope>
 		</dependency>
