--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -61,31 +61,45 @@
 					</execution>
 				</executions>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<artifactId>exec-maven-plugin</artifactId> -->
-<!-- 				<groupId>org.codehaus.mojo</groupId> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>Version Calculation</id> -->
-<!-- 						<phase>install</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>java</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<mainClass>picocli.AutoComplete</mainClass> -->
-<!-- 							<arguments> -->
-<!-- 								<argument>-n</argument> -->
-<!-- 								<argument>./peass</argument> -->
-<!-- 								<argument>-o</argument> -->
-<!-- 								<argument>${project.parent.basedir}/peass_completion</argument> -->
-<!-- 								<argument>de.peass.PeASSMain</argument> -->
-<!-- 							</arguments> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>autompletion</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>exec-maven-plugin</artifactId>
+						<groupId>org.codehaus.mojo</groupId>
+						<executions>
+							<execution>
+								<id>Completion Creation</id>
+								<phase>install</phase>
+								<goals>
+									<goal>java</goal>
+								</goals>
+								<configuration>
+									<mainClass>picocli.AutoComplete</mainClass>
+									<arguments>
+										<argument>-n</argument>
+										<argument>./peass</argument>
+										<argument>-o</argument>
+										<argument>${project.parent.basedir}/peass_completion</argument>
+										<argument>de.peass.PeASSMain</argument>
+										<argument>--force</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<dependencies>
 		<dependency>
