--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,13 +15,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy: 
+        matrix:
+          java: [ 1.8, 11 ]
+    name: Java ${{ matrix.java }} sample
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: [ 1.8 11 ]
+        java-version: ${{ matrix.java }}
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
