--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,7 @@ jobs:
     strategy: 
         matrix:
           java: [ 1.8, 11 ]
+          fail-fast: false
     name: Java ${{ matrix.java }} sample
     steps:
     - uses: actions/checkout@v2
