--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy: 
         matrix:
-          java: [ 1.8, 11 ]
+          java: [ 1.8, 11, 15 ]
         fail-fast: false
     name: Java ${{ matrix.java }} sample
     steps:
