--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -77,15 +77,12 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.14.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.github.javaparser</groupId>
 			<artifactId>javaparser-core</artifactId>
 			<version>3.18.0</version>
 		</dependency>
+		
+		
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
@@ -97,6 +94,13 @@
 			<version>1.15-SNAPSHOT</version>
 			<classifier>aspectj</classifier>
 		</dependency>
+		<!-- Normally, we just use log4j2. Since kieker relies on slf4j, we need to add the bridge -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.14.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -114,12 +118,12 @@
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit</artifactId>
-			<version>0.13</version>
+			<version>0.14-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit3</artifactId>
-			<version>0.13</version>
+			<version>0.14-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
