--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -39,6 +39,9 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>de.peass.PeASSMain</mainClass>
+									<manifestEntries>
+										<Multi-Release>true</Multi-Release>
+									</manifestEntries>
 								</transformer>
 							</transformers>
 							<filters>
