Update missing test dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ out.txt
 /target/
 /target/
 peass_completion
+measurement/src/test/resources/sourceChangeRCATest/project_3_peass/**/*sh
 analysis/src/test/resources/visualization/project_test_peass/clearRCA.sh
 analysis/src/test/resources/visualization/project_test_peass/getProgress.sh
 analysis/src/test/resources/visualization/project_test_peass/rca/getIntermediaryValues.sh
