--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j.slf4j-api</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.30</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
