--- a/dependency/src/test/resources/dependencyIT_multimodule/another_change/pom.xml
+++ b/dependency/src/test/resources/dependencyIT_multimodule/another_change/pom.xml
@@ -1,7 +1,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.dagere</groupId>
+	<groupId>de.peass</groupId>
 	<artifactId>dependency-test</artifactId>
 	<version>0.1-SNAPSHOT</version>
         <packaging>pom</packaging>
@@ -19,7 +19,6 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<core.version>0.11-SNAPSHOT</core.version>
 		<java.version>1.8</java.version>
-		<kieker.version>1.13</kieker.version>
 	</properties>
 
 	<modules>
@@ -33,7 +32,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.5.1</version>
+					<version>3.8.1</version>
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
