--- a/dependency/src/test/resources/dependencyIT_multimodule/basic_state/base-module/pom.xml
+++ b/dependency/src/test/resources/dependencyIT_multimodule/basic_state/base-module/pom.xml
@@ -1,7 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.dagere</groupId>
+	<groupId>de.peass</groupId>
 	<artifactId>base-module</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<name>base-module</name>
@@ -11,7 +12,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.1</version>
 		</dependency>
 	</dependencies>
 </project>
