--- a/dependency/src/test/resources/dependencyIT_multimodule/normal_change/pom.xml
+++ b/dependency/src/test/resources/dependencyIT_multimodule/normal_change/pom.xml
@@ -1,10 +1,12 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.dagere</groupId>
+	<groupId>de.peass</groupId>
 	<artifactId>dependency-test</artifactId>
 	<version>0.1-SNAPSHOT</version>
-        <packaging>pom</packaging>
+	<packaging>pom</packaging>
 	<name>dependency-test</name>
 	<description>Example for Testing Dependencies</description>
 
@@ -19,7 +21,6 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<core.version>0.11-SNAPSHOT</core.version>
 		<java.version>1.8</java.version>
-		<kieker.version>1.13</kieker.version>
 	</properties>
 
 	<modules>
@@ -33,7 +34,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.5.1</version>
+					<version>3.8.1</version>
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
@@ -48,7 +49,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.1</version>
 		</dependency>
 	</dependencies>
 
