Update dependencies to kieker 1.15-SNAPSHOT in example projects

--- a/dependency/src/test/resources/sourceInstrumentation/project_2/pom.xml
+++ b/dependency/src/test/resources/sourceInstrumentation/project_2/pom.xml
@@ -35,7 +35,8 @@
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
 			<artifactId>kieker</artifactId>
-			<version>1.14</version>
+			<version>1.15-SNAPSHOT</version>
+			<classifier>jar</classifier>
 		</dependency>
 	</dependencies>
 </project>
