Try do publish different test reports

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
       run: mvn -B verify --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
-    - name: Publish Test Report
+    - name: Publish Test Report ${{ matrix.java }}
       if: ${{ always() }}
       uses: scacap/action-surefire-report@v1
       with:
