Adapt to changed KoPeMe package declarations

--- a/dependency/src/main/resources/copy/kieker.monitoring.properties
+++ b/dependency/src/main/resources/copy/kieker.monitoring.properties
@@ -25,8 +25,8 @@ kieker.monitoring.name=KIEKER-KoPeMe
 ## kieker.monitoring.writer.IMonitoringWriter and providing a constructor that 
 ## accepts a single Configuration. 
 #kieker.monitoring.writer=kieker.monitoring.writer.filesystem.AsyncFsWriter
-kieker.monitoring.writer=kieker.monitoring.writer.filesystem.ChangeableFolderWriter
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.realwriter=FileWriter
+kieker.monitoring.writer=de.dagere.kopeme.kieker.writer.ChangeableFolderWriter
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.realwriter=FileWriter
 
 #####
 #kieker.monitoring.writer=kieker.monitoring.writer.PrintStreamWriter
@@ -39,32 +39,32 @@ kieker.monitoring.writer.filesystem.ChangeableFolderWriter.realwriter=FileWriter
 
 kieker.monitoring.core.controller.WriterController.RecordQueueFQN=java.util.concurrent.LinkedBlockingQueue
 
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.QueueSize=1000000
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.PrioritizedQueueSize=1000000
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.QueueSize=1000000
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.PrioritizedQueueSize=1000000
 
 ####
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.customStoragePath=
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.customStoragePath=
 #
 ## The maximal number of entries (records) per created file.
 ## Must be greater than zero.
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.maxEntriesInFile=500000
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.maxEntriesInFile=500000
 #
 ## The maximal file size of the generated monitoring log. Older files will be 
 ## deleted if this file size is exceeded. Given in MiB.
 ## At least one file will always remain, regardless of size!
 ## Use -1 to ignore this functionality. 
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.maxLogSize=-1
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.maxLogSize=-1
 #
 ## The maximal number of log files generated. Older files will be 
 ## deleted if this number is exceeded.
 ## At least one file will always remain, regardless of size!
 ## Use -1 to ignore this functionality. 
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.maxLogFiles=-1
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.maxLogFiles=-1
 #
 ## When flushing is disabled, it could require a lot of records before
 ## finally any writing is done.
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.flush=true
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.flush=true
 #
 ## When flushing is disabled, records are buffered in memory before written.
 ## This setting configures the size of the used buffer in bytes.
-kieker.monitoring.writer.filesystem.ChangeableFolderWriter.bufferSize=8192
+de.dagere.kopeme.kieker.writer.ChangeableFolderWriter.bufferSize=8192
