--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -40,6 +40,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>de.peass</groupId>
 			<artifactId>measurement</artifactId>
 			<version>0.1-SNAPSHOT</version>
