Fix problem when test line changes because of dependency adding

--- a/dependency/src/test/resources/gradle-multimodule-subprojectexample/build.gradle
+++ b/dependency/src/test/resources/gradle-multimodule-subprojectexample/build.gradle
@@ -15,6 +15,10 @@ dependencies {
   testCompile 'junit:junit:4.13.2'
 }
 
+test {
+  useJUnitPlatform()
+}
+
 subprojects {    
     apply plugin: "java"
 }
