--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -8,7 +8,7 @@
 	<name>peass-measurement</name>
 
 	<parent>
-		<groupId>de.peass</groupId>
+		<groupId>de.dagere.peass</groupId>
 		<artifactId>peass-parent</artifactId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>
