--- a/dependency/src/test/resources/jmh-it/slower_version/pom.xml
+++ b/dependency/src/test/resources/jmh-it/slower_version/pom.xml
@@ -2,14 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.sample</groupId>
-    <artifactId>test</artifactId>
+    <groupId>de.dagere.peass</groupId>
+    <artifactId>example</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>Peass JMH integration test - basic version</name>
-
-    
+    <name>Peass JMH integration test - example</name>
 
     <dependencies>
         <dependency>
