Save to correct folder

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -69,7 +69,7 @@
 
 	<profiles>
 		<profile>
-			<id>autocompletion</id>
+			<id>autompletion</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
@@ -92,7 +92,7 @@
 										<argument>./peass</argument>
 										<argument>-o</argument>
 										<argument>${project.parent.basedir}/peass_completion</argument>
-										<argument>de.dagere.peass.PeASSMain</argument>
+										<argument>de.peass.PeASSMain</argument>
 										<argument>--force</argument>
 									</arguments>
 								</configuration>
